2009-03-03  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/Requirements.txt: added user-requested requirements.

2009-03-02  Lars Hartmann  <lars (at) chaotika (dot) org>

	Started to add Design Documents.
	* doc/Requirements.txt: added.

2009-03-01  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/Makefile.am: renamed entries.

2009-02-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: removed unneeded tests.

2009-02-21  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (lpxpak_parse_fd): replaced EBADFD with the
	posix equivalent EBADF.

	* t/Makefile.am (02_lpxpak_parse_LDADD): replaced absolute with
	relative path to fix distcheck target.

	* t/02_lpxpak_parse.c: updated to work with the new object based
	xpak api.

	* include/xpak.h: Migrated the xpak code to an object based model.

	* src/liblpxpak.c: Migrated the xpak code to an object based model.

	* t/Makefile.am (check-syntax): added target for emacs flyspell.

2009-02-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	* t/Makefile.am: replaced relative with absolute paths.

2009-02-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/xpak.txt: grammar and typo fixes (thanks to Leonie Herzberg)

2009-02-16  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (LPXPAK_INT_SIZE): added.
	replaced every occurence of "sizeof(lpxpak_int_t)" with
	LPXPAK_INT_SIZE.
	comments++.

	Updated Tests:
	* t/02_lpxpak_parse.c: does now work with distcheck
	* t/01_lpatom_parse.c: does now work with distcheck
	added error handling.
	* t/Makefile.am (AM_CPPFLAGS): added -g to CFLAGS

2009-02-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c: updated documentation.

	* .gitignore: added all the autotools generated stuff plus the
	stuff that gets produced during compile-time.

2009-02-11  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (lpxpak_indexblob_compile): fixed typo.
