@@ -1,5 +1,5 @@
-#ifndef __LPCOMMON_H
-#define __LPCOMMON_H
+#ifndef LPCOMMON
+#define LPCOMMON 1
 
 #ifdef __cplusplus
 # define BEGIN_C_DECLS extern "C" {
@@ -9,4 +9,4 @@
 # define END_C_DECLS
 #endif
 
-#endif /* __LPCOMMON_H */
+#endif /* LPCOMMON */
