@@ -1,5 +1,12 @@
 2009-03-03  Lars Hartmann  <lars (at) chaotika (dot) org>
 
+	Renamed defines:
+	* include/util.h (__LPUTIL): renamed to LPUTIL and set value to 1.
+	* include/common.h (__LPCOMMON_H): renamed to LPCOMMON and set
+	value to 1.
+	* include/atom.h (__LPATOM): renamed to LPATOM and set value to 1.
+	* include/xpak.h (__LPXPAK): renamed to LPXPAK and set value to 1.
+
 	* doc/Requirements.txt: added user-requested requirements.
 
 2009-03-02  Lars Hartmann  <lars (at) chaotika (dot) org>
